# faim-huygens

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  reuse-compliance-check.yml  test.yml
LICENSES/: MIT.txt
src/faim_huygens/: __about__.py  __init__.py  parameters.py  templates.py
tests/: test_parameters.py  test_templates.py
tests/resources/: test_template.hgsb
